--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -16,12 +16,6 @@
 }
 
 @font-face {
-    font-family: "HelveticaNeueMdCn";
-    src: url('../fonts/HelveticaNeueLTCom-MdCn.ttf') format('truetype'),
-    url('../fonts/HelveticaNeueLTCom-MdCn.woff') format('woff');
-}
-
-@font-face {
     font-family: "HelveticaNeueBdCn";
     src: url('../fonts/HelveticaNeueLTCom-BdCn.ttf') format('truetype'),
     url('../fonts/HelveticaNeueLTCom-BdCn.woff') format('woff');
@@ -507,10 +501,13 @@ a:hover, a.selected{
 b, strong { font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal; }
 
 blockquote {
-    border-left:1px solid #e5e5e5;
-    margin:0;
-    padding:0 0 0 20px;
+    border-left:4px solid #A5A5A5;
+    margin: 0px 0px 10px;
+    padding: 9px 9px 1px 9px;
     font-style:italic;
+    background-color: #F2F2E2;
+
+    p { text-align: justify; }
 }
 
 code, pre {
