--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -404,6 +404,7 @@ footer {
     clear: both;
     display: block;        
     color: white;
+    background: url(/themes/default/img/banner/sidney-meditation.jpg);
 
     a {color: yellow;}
 
