background in top of body

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -52,8 +52,11 @@ header {
     background-color: @glass;
     border-bottom: 1px solid rgba(255, 255, 255, 1);
     /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
-    padding: 4px 0px;
+    padding: 4px 0px 0px;
     z-index: 10; /* cause banner position relative stay hover on the header */
+    background-image: url(../img/anchor-bg.png);
+    background-repeat: no-repeat;
+    background-size: 200%;
     
     .signature {
         .text-shadow(0px, 0px, 0px, rgba(255, 255, 255, 0));
