--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -63,10 +63,12 @@ header {
   background-color: rgba(255, 255, 255, 0.82);
   border-bottom: 1px solid white;
   /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
-  padding: 4px 0px;
+  padding: 4px 0px 0px;
   z-index: 10;
   /* cause banner position relative stay hover on the header */
-
+  background-image: url(../img/anchor-bg.png);
+  background-repeat: no-repeat;
+  background-size: 200%;
 }
 header .signature {
   text-shadow: 0px 0px 0px rgba(255, 255, 255, 0);
