--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -12,6 +12,14 @@
         <meta name="google-translate-customization" content="6b8d269fcbc1b6d5-0fa0d030d26cbeaf-ga791899a89db06bb-16"
         />
         <meta name="google-site-verification" content="Pr8cH5u5tY0QHDX951vrlp84EyJlWdOnCgS9UQhxLmg" />
+        <!-- Ao colocar os scripts do google no rodapé, buga a página  -->
+        <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>
+        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.0.js" type="text/javascript"></script>
+        <script src="/themes/default/js/linq.js" type="text/javascript"></script>
+        <script src="/themes/default/js/moment/moment.min.js" type="text/javascript"></script>                     
+        <script src="/themes/default/js/user.js" type="text/javascript"></script>
+
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">            
             </script>
@@ -20,13 +28,7 @@
             <script type="text/javascript" src="http://fast.fonts.com/jsapi/d34e3f76-678a-447e-a024-f6b2e5185713.js">            
             </script>
         <![endif]-->
-        <script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
-        <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.0.js" type="text/javascript"></script>
-        <script src="/themes/default/js/linq.js" type="text/javascript"></script>
-        <script src="/themes/default/js/moment/moment.min.js" type="text/javascript"></script>                     
-        <script src="/themes/default/js/quotes.js" type="text/javascript"></script>
-        <script src="/themes/default/js/user.js" type="text/javascript"></script>
+
     </head>
     
     <body>
@@ -44,21 +46,17 @@
                             {%endif%} title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
                         </li>
                         <li>
-                            <a href="/leituras.html" {%if page.categories contains 'leituras'%}class="selected" {%endif%}
-                            title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
-                        </li>
-                        <li>
-                            <a href="/artigos.html" {%if page.categories contains 'artigos'%}class="selected" {%endif%}
-                            title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
-                        </li>
-                        <li>
-                            <a href="/palestras.html" {%if page.categories contains 'palestras'%}class="selected" {%endif%}
-                            title="Eventos em que participei palestrando.">PALESTRAS</a>
-                        </li>
-                        <li>
                             <a href="/life-list.html" {%if page.categories contains 'life-list'%}class="selected" {%endif%}
                             title="Uma lista de coisas que acho imprescindível realizar antes de morrer.">LIFE LIST</a>
                         </li>
+                         <li>
+                            <a href="/palestras.html" {%if page.categories contains 'palestras'%}class="selected" {%endif%}
+                            title="Eventos em que participei palestrando.">PALESTRAS</a>
+                        </li> 
+                        <li>
+                            <a href="/leituras.html" {%if page.categories contains 'leituras'%}class="selected" {%endif%}
+                            title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
+                        </li>                                               
                         <li>
                             <a href="/contato.html" {%if page.categories contains 'contato'%}class="selected" {%endif%}
                             title="O canal mais rápido para falar comigo depois do telefone.">CONTATO</a>
@@ -85,10 +83,27 @@
             <div class="super">
                 <div class="wrapper">
                     <div class="left-side">
-                        <div {% if page.categories %} class="{{page.categories}}" {% endif %}>{{ content }}
+                        <div {% if page.categories %} class="{{page.categories}}" {% endif %}>
+                            {{ content }}
                         </div>
                     </div>
                     <div class="right-side">
+                        <div class="searchbox">
+                            <script>
+                              (function() {
+                                var cx = '010265132630903561868:tfv0qg92nim';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                                    '//www.google.com/cse/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                              })();
+                            </script>
+                            <gcse:search></gcse:search>
+
+                        </div>
                         <div class="widget myinfo">
                             <div class="gravatar">
                                 <img src="http://1.gravatar.com/avatar/13c12ed8bb09f191876ae217829b15ed?size=96" />Eu sou Sidney Lima Filho e aqui você saberá sobre quem eu sou e minhas ideias. Abaixo estão
@@ -130,6 +145,8 @@
             </div>
         </footer> 
     </body>
+
+    
 
     <!-- populate social media links -->
     <script type="text/javascript">
