--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -89,38 +89,26 @@ header #google_translate_element {
 header menu {
   float: right;
   margin: 0px;
-  padding: 25px 0px 0px;
+  padding: 18px 0px 0px;
 }
 header menu ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
-  /* background: #eee;
-            background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-            background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            
-            border-radius:5px;
-            border:1px solid #d2d2d2;
-            box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;*/
-
 }
-header menu ul li {
+header menu li {
   padding: 0px 10px;
   display: inline-block;
   /*border-right:1px solid #d2d2d2;
-                height: 70px;*/
+            height: 70px;*/
   vertical-align: middle;
   /*a:hover, a.selected{
-                    text-decoration: none;
-                    border-top: 1px solid @linkColorHover;
-                }*/
+                text-decoration: none;
+                border-top: 1px solid @linkColorHover;
+            }*/
 
 }
-header menu ul li a {
+header menu li a {
   display: block;
   text-align: center;
   font-size: 18px;
@@ -616,8 +604,6 @@ table {
 th,
 td {
   text-align: left;
-  padding: 5px 10px;
-  border-bottom: 1px solid #e5e5e5;
 }
 dt {
   color: #444444;
@@ -981,4 +967,219 @@ img {
 }
 .type-csharp .highlight .sc {
   color: #a31515;
+}
+/**
+ * Default theme
+ *
+ */
+
+/* Slight reset to make the preview have ample padding. */
+
+.cse .gsc-control-cse,
+.gsc-control-cse {
+  padding: 0em !important;
+  width: auto;
+}
+.cse .gsc-control-wrapper-cse,
+.gsc-control-wrapper-cse {
+  width: 100%;
+}
+.cse .gsc-branding,
+.gsc-branding {
+  display: none;
+}
+.cse .gsc-control-cse div,
+.gsc-control-cse div {
+  position: normal;
+}
+/* Selector for entire element. */
+
+.cse .gsc-control-cse,
+.gsc-control-cse {
+  background-color: white;
+  border: 1px solid white;
+}
+.cse .gsc-control-cse:after,
+.gsc-control-cse:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.cse .gsc-resultsHeader,
+.gsc-resultsHeader {
+  border: block;
+}
+table.gsc-search-box td.gsc-input {
+  padding-right: 0px !important;
+}
+table.gsc-search-box th,
+table.gsc-search-box td {
+  padding: 0px !important;
+}
+input.gsc-input {
+  border-color: #d9d9d9;
+  font-size: 13px;
+  padding: 1px 6px;
+}
+/* Search button */
+
+.cse input.gsc-search-button,
+input.gsc-search-button {
+  font-family: inherit;
+  font-size: 11px;
+  font-weight: bold;
+  color: black;
+  padding: 0 8px;
+  height: 20px;
+  min-width: 54px;
+  background-color: #cecece;
+  border: 1px solid #666666;
+  border-radius: 2px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+}
+/* Inactive tab */
+
+.cse .gsc-tabHeader.gsc-tabhInactive,
+.gsc-tabHeader.gsc-tabhInactive {
+  border-bottom: none;
+  color: #666666;
+  background-color: #e9e9e9;
+  border: 1px solid;
+  border-color: #e9e9e9;
+}
+/* Active tab */
+
+.cse .gsc-tabHeader.gsc-tabhActive,
+.gsc-tabHeader.gsc-tabhActive {
+  background-color: white;
+  border: 1px solid;
+  border-top: 2px solid;
+  border-color: #e9e9e9;
+  border-top-color: #ff9900;
+  border-bottom: none;
+}
+/* This is the tab bar bottom border. */
+
+.cse .gsc-tabsArea,
+.gsc-tabsArea {
+  margin-top: 1em;
+  border-bottom: 1px solid #e9e9e9;
+}
+/* Inner wrapper for a result */
+
+.cse .gsc-webResult.gsc-result,
+.gsc-webResult.gsc-result,
+.gsc-imageResult-column,
+.gsc-imageResult-classic {
+  padding: .25em;
+  border: 1px solid;
+  border-color: white;
+  margin-bottom: 1em;
+}
+/* Result hover event styling */
+
+.cse .gsc-webResult.gsc-result:hover,
+.gsc-webResult.gsc-result:hover,
+.gsc-webResult.gsc-result.gsc-promotion:hover,
+.gsc-results .gsc-imageResult-classic:hover,
+.gsc-results .gsc-imageResult-column:hover {
+  border: 1px solid;
+  border-color: white;
+}
+/*Promotion Settings*/
+
+/* The entire promo */
+
+.cse .gsc-webResult.gsc-result.gsc-promotion,
+.gsc-webResult.gsc-result.gsc-promotion {
+  background-color: white;
+  border-color: #336699;
+}
+/* Promotion links */
+
+.cse .gs-promotion a.gs-title:link,
+.gs-promotion a.gs-title:link,
+.cse .gs-promotion a.gs-title:link *,
+.gs-promotion a.gs-title:link *,
+.cse .gs-promotion .gs-snippet a:link,
+.gs-promotion .gs-snippet a:link {
+  color: #0000cc;
+}
+.cse .gs-promotion a.gs-title:visited,
+.gs-promotion a.gs-title:visited,
+.cse .gs-promotion a.gs-title:visited *,
+.gs-promotion a.gs-title:visited *,
+.cse .gs-promotion .gs-snippet a:visited,
+.gs-promotion .gs-snippet a:visited {
+  color: #0000cc;
+}
+.cse .gs-promotion a.gs-title:hover,
+.gs-promotion a.gs-title:hover,
+.cse .gs-promotion a.gs-title:hover *,
+.gs-promotion a.gs-title:hover *,
+.cse .gs-promotion .gs-snippet a:hover,
+.gs-promotion .gs-snippet a:hover {
+  color: #0000cc;
+}
+.cse .gs-promotion a.gs-title:active,
+.gs-promotion a.gs-title:active,
+.cse .gs-promotion a.gs-title:active *,
+.gs-promotion a.gs-title:active *,
+.cse .gs-promotion .gs-snippet a:active,
+.gs-promotion .gs-snippet a:active {
+  color: #0000cc;
+}
+/* Promotion snippet */
+
+.cse .gs-promotion .gs-snippet,
+.gs-promotion .gs-snippet,
+.cse .gs-promotion .gs-title .gs-promotion-title-right,
+.gs-promotion .gs-title .gs-promotion-title-right,
+.cse .gs-promotion .gs-title .gs-promotion-title-right *,
+.gs-promotion .gs-title .gs-promotion-title-right * {
+  color: black;
+}
+/* Promotion url */
+
+.cse .gs-promotion .gs-visibleUrl,
+.gs-promotion .gs-visibleUrl {
+  color: green;
+}
+/* Style for auto-completion table
+ * .gsc-completion-selected : styling for a suggested query which the user has moused-over
+ * .gsc-completion-container : styling for the table which contains the completions
+ */
+
+.gsc-completion-selected {
+  background: #eeeeee;
+}
+.gsc-completion-container {
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  background: white;
+  border: 1px solid #cccccc;
+  border-top-color: #d9d9d9;
+  margin-left: 0;
+  margin-right: 0;
+  /* The top, left, and width are set in JavaScript. */
+
+}
+.gsc-completion-title {
+  color: #0000cc;
+}
+.gsc-completion-snippet {
+  color: black;
+}
+/* Full URL */
+
+.gs-webResult div.gs-visibleUrl-short,
+.gs-promotion div.gs-visibleUrl-short {
+  display: none;
+}
+.gs-webResult div.gs-visibleUrl-long,
+.gs-promotion div.gs-visibleUrl-long {
+  display: block;
 }
