--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -70,52 +70,39 @@ header {
     
     #google_translate_element {
         position: absolute;
-        top:0px;
+        top:0px; 
         right:0px;
     }
     
     menu {
         float: right;
         margin: 0px;
-        padding: 25px 0px 0px;
+        padding: 18px 0px 0px;
         
         ul {
             list-style:none;
             padding:0px;
-            margin: 0px;
+            margin: 0px;         
+        }
+
+       li {
+            padding: 0px 10px;
+            display: inline-block;
+            /*border-right:1px solid #d2d2d2;
+            height: 70px;*/
+            vertical-align: middle;
             
-            /* background: #eee;
-            background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-            background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-            
-            border-radius:5px;
-            border:1px solid #d2d2d2;
-            box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;*/
-            
-            
-            li {
-                padding: 0px 10px;
-                display: inline-block;
-                /*border-right:1px solid #d2d2d2;
-                height: 70px;*/
-                vertical-align: middle;
-                
-                a {
-                    display:block;
-                    text-align:center;
-                    font-size:18px;
-                    color: #696B33;
-                    .text-shadow(0px, 0px, 0px, rgba(0, 0, 0, 0));
-                }
-                /*a:hover, a.selected{
-                    text-decoration: none;
-                    border-top: 1px solid @linkColorHover;
-                }*/
+            a {
+                display:block;
+                text-align:center;
+                font-size:18px;
+                color: #696B33;
+                .text-shadow(0px, 0px, 0px, rgba(0, 0, 0, 0));
             }
+            /*a:hover, a.selected{
+                text-decoration: none;
+                border-top: 1px solid @linkColorHover;
+            }*/
         }
     }
     
@@ -535,8 +522,7 @@ table {
 
 th, td {
     text-align:left;
-    padding:5px 10px;
-    border-bottom:1px solid #e5e5e5;
+    
 }
 
 dt {
@@ -566,3 +552,5 @@ img {
 
 
 @import url(pygment_trac.less);
+
+@import url(google-searchbox.less);
