--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -129,9 +129,10 @@
             <div class="super">
                 <div class="wrapper">
                     <div class="tag-cloud">
-                        {% for t in site.tags | sort %} {% capture tag %}{{t | first}}{% endcapture %}
+                        {% for t in site.tags %} {% capture tag %}{{t | first}}{% endcapture %}
                             <span>
-                                <a href="/tags.html#{{tag | downcase | replace:" ","-" | replace:".","" }}">{{tag}} ({{site.tags[tag] | size}})</a>
+                                <a href="/tags.html#{{tag | downcase | replace:" ","-" | replace:".","" }}"
+                                   style="font-size:{{site.tags[tag] | size | times:100 | divided_by:site.tags.size | plus:100}}" >{{tag}} ({{site.tags[tag] | size}})</a>
                             </span>
                         {% endfor %}                       
                     </div>
