--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -89,7 +89,7 @@ header #google_translate_element {
 header menu {
   float: right;
   margin: 0px;
-  padding: 18px 0px 0px;
+  padding: 24px 0px 0px;
 }
 header menu ul {
   list-style: none;
@@ -496,6 +496,10 @@ body {
 }
 small {
   font-size: 80%;
+}
+::selection {
+  background: #ff9900;
+  color: white;
 }
 p {
   text-align: justify;
