--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -47,6 +47,7 @@ overlay{
     div{ width: 860px; height: 510px; margin:0px auto;}
 }
 
+
 header {
     position:absolute;
     background-color: @glass;
@@ -77,7 +78,7 @@ header {
     menu {
         float: right;
         margin: 0px;
-        padding: 18px 0px 0px;
+        padding: 24px 0px 0px;
         
         ul {
             list-style:none;
@@ -105,10 +106,7 @@ header {
             }*/
         }
     }
-    
-    
 }
-
 
 banner {
     position: relative;
@@ -386,8 +384,6 @@ section {
             small { display: block; }
         }
     }
-    
-    
 }
 
 footer {
@@ -437,6 +433,10 @@ small {
     font-size:80%;
 }
 
+::selection {
+    background: rgb(255, 153, 0);
+    color: rgb(255, 255, 255);
+}
 
 p { text-align: justify; }
 
