--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -78,7 +78,7 @@ header {
     menu {
         float: right;
         margin: 0px;
-        padding: 24px 0px 0px;
+        padding: 18px 0px 0px;
         
         ul {
             list-style:none;
@@ -321,7 +321,7 @@ section {
         margin: 0px 10px 10px 0px;
     }
 
-    blockquote, .tag-list div:target {
+    .tag-list div:target {
         border-left:2px solid rgba(255, 66, 66, 0.81);
         margin: 0px 0px 10px;
         padding: 1px 9px 1px 9px;
@@ -461,6 +461,15 @@ p, ul, li, ol, table, h1, h2, h3, h4, h5, h6, pre, dl {
 
 ul { padding-left: 17px; list-style-position: inside;}
 
+blockquote{
+    background-image: url(/themes/default/img/big_quote_icon.png);
+    background-repeat: no-repeat;
+    color: rgb(0, 112, 255);
+    background-position: 0px 10px;
+    margin: 0px 0px 10px;
+    padding: 1px 9px 1px 42px;
+    min-height: 45px;
+}
 
 h1, h2, h3 {
     line-height:1.1;
