--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -453,13 +453,14 @@ h1, h2, h3, h4, h5, h6, quote {
     font-weight: normal;
     .text-shadow(0px, 0px, 8px, rgba(0, 0, 0, 0));
     color: #000;
+    clear:both;
 }
 
 p, ul, li, ol, table, h1, h2, h3, h4, h5, h6, pre, dl {
     margin:5px 0 5px;
 }
 
-ul { padding-left: 17px; list-style-position: inside;}
+ul { padding-left: 17px; list-style-position: outside; }
 
 blockquote{
     background-image: url(/themes/default/img/big_quote_icon.png);
@@ -471,24 +472,19 @@ blockquote{
     min-height: 45px;
 }
 
-h1, h2, h3 {
+h1 { font-size: 40px; }
+
+h2 { font-size: 32px; }
+
+h3 { font-size: 32px; }
+
+h4 { font-size: 24px; }
+
+h1, h2 { 
+    font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal; 
     line-height:1.1;
 }
-
-h1 {
-    font-size: 40px;
-    font-family: "HelveticaNeueBdCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal;
-}
-
-h2 {
-    font-size: 34px;
-}
-
-h3 {
-    font-size: 24px;
-}
-
-h3, h4, h5, h6 {}
+h3, h4, h5, h6 {font-family: "HelveticaNeueThCn", "HelveticaNeueW01-77BdCn 692722", Helvetica, sans-serif; font-weight: normal;}
 
 a {
     color:@linkColor;
