#8: Exchange ShareThis to AddThis

--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -1,7 +1,6 @@
 --- 
 layout: default 
 ---
-
 <article>
     <h1>
         {{ page.title }}
@@ -12,31 +11,23 @@ layout: default
         </time>
     </h1>
 
-    <center class="social-buttons">
-        <span class='st_facebook_hcount' displayText='Facebook'></span>
-        <span class='st_twitter_hcount' displayText='Tweet'></span>
-        <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-        <span class='st_googleplus_hcount' displayText='Google +'></span>
-        <span class='st_email_hcount' displayText='Email'></span>
-    </center>
+    <div class="addthis_toolbox addthis_default_style social-buttons">
+        <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+        <a class="addthis_button_linkedin_counter"></a>
+        <a class="addthis_button_tweet"></a>                
+        <a class="addthis_counter addthis_pill_style"></a>
+    </div>
 
     <div class="content">{{ content }}</div>
 
-    
+    <div class="addthis_toolbox addthis_default_style social-buttons">
+        <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+        <a class="addthis_button_linkedin_counter"></a>
+        <a class="addthis_button_tweet"></a>                
+        <a class="addthis_counter addthis_pill_style"></a>
+    </div>
 
-    <center class="social-buttons">
-        <span class='st_facebook_hcount' displayText='Facebook'></span>
-        <span class='st_twitter_hcount' displayText='Tweet'></span>
-        <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-        <span class='st_googleplus_hcount' displayText='Google +'></span>
-        <span class='st_email_hcount' displayText='Email'></span>
-    </center>
-
-
-    
-   
 </article>
-
 {% unless page.no_comments %}
 <div class="comments">
     <h2>O que você achou?</h2>
@@ -67,27 +58,26 @@ layout: default
     </a>
 </div>
 {% endunless %}
-
- <div class="nav-next-prev">
+<div class="nav-next-prev">
     <h2>Você pode gostar também ...</h2>
     <div class="previous">
-        {% if page.previous.url %} 
-        <a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title }}</a> 
+        {% if page.previous.url %}
+        <a href="{{ page.previous.url }}" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title }}</a>
         &laquo;&nbsp;
         {% endif %}
     </div>
     <div class="next">
         {% if page.next.url %}
-        &nbsp;&raquo; 
+        &nbsp;&raquo;
         <a href="{{ page.next.url }}" rel="next" title="{{ page.next.title }}">{{ page.next.title }}</a>
         {% endif %}
-    </div>   
+    </div>
 
     <div class="tags">
         {% if page.tags %} 
-        Conheça outros artigos relacionados com:  {% for tag in page.tags %}
-            <strong><a href="/tags.html#{{ tag | downcase | replace:" ","-" | replace:".","" }}">{{ tag }}</a></strong>{% unless forloop.last %}, {% endunless %} 
+        Conheça outros artigos relacionados com:  {% for tag in page.tags %} <strong><a href="/tags.html#{{ tag | downcase | replace:" ","-" | replace:".","" }}">{{ tag }}</a></strong> 
+        {% unless forloop.last %}, {% endunless %} 
         {% endfor %} 
         {% endif %}
-    </div>      
-</div>   
+    </div>
+</div>
