--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -306,7 +306,9 @@ section {
     
     nav {float: right;}
         
-    .social-buttons{ padding:10px 0px 20px; }
+    .social-buttons{ padding:10px 0px 20px; 
+        a { background-image: none; }
+    }
 
     .nav-next-prev { 
         padding: 10px 0px;
