--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -164,12 +164,10 @@
     $banner.css({ background: 'url(/themes/default/img/banner/' + q.banner + ')' });
     
     </script>
+    
     <!-- Share buttons in posts  -->
-    <script type="text/javascript">var switchTo5x=true;</script>
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">
-        stLight.options({publisher: "ed98425d-33e8-4e66-a1e2-aa565f8ef166", doNotHash: true, doNotCopy: true, hashAddressBar: false});
-    </script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=undefined"></script>
+
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
