--- a/_layouts/post.htm
+++ b/_layouts/post.htm
@@ -14,8 +14,9 @@ layout: default
     <div class="addthis_toolbox addthis_default_style social-buttons">
         <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
         <a class="addthis_button_linkedin_counter"></a>
-        <a class="addthis_button_tweet"></a>                
+        <a class="addthis_button_tweet"></a>   
         <a class="addthis_counter addthis_pill_style"></a>
+        <a class="addthis_button_buffer" style="float:right"></a>  
     </div>
 
     <div class="content">{{ content }}</div>
@@ -25,6 +26,7 @@ layout: default
         <a class="addthis_button_linkedin_counter"></a>
         <a class="addthis_button_tweet"></a>                
         <a class="addthis_counter addthis_pill_style"></a>
+        <a class="addthis_button_buffer" style="float:right"></a>  
     </div>
 
 </article>
