#9 fix mobile resolutions

--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -79,7 +79,7 @@ header .signature {
   float: left;
   color: transparent;
   background: url(../img/signature-logo.png) no-repeat left center;
-  margin: 0px;
+  margin-left: 5px;
 }
 header #google_translate_element {
   position: absolute;
@@ -89,7 +89,7 @@ header #google_translate_element {
 header menu {
   float: right;
   margin: 0px;
-  padding: 18px 0px 0px;
+  padding: 18px 0px 0px 10px;
 }
 header menu ul {
   list-style: none;
@@ -208,7 +208,7 @@ section .widget {
   width: 260px;
   float: left;
   height: 260px;
-  margin: 20px 38px 20px 0px;
+  margin: 12px 0px 12px 24px;
   background-position: 0% 100%;
   background-repeat: no-repeat;
   transition: background-position 2000ms ease;
@@ -230,6 +230,12 @@ section .widget::after {
   left: 0;
   background: url(../img/shadow2.png) no-repeat top center;
   width: 100%;
+}
+section .searchbox {
+  width: 260px;
+  float: left;
+  height: 260px;
+  margin: 12px 0px 12px 24px;
 }
 section .post-wall a {
   display: block;
@@ -399,8 +405,7 @@ section .tag-list div:target p {
   text-align: justify;
 }
 section .left-side {
-  width: 600px;
-  /*padding-right: 24px;*/
+  max-width: 600px;
   float: left;
   overflow: hidden;
 }
@@ -449,7 +454,7 @@ section .left-side .post year {
 }
 section .right-side {
   width: 260px;
-  float: right;
+  float: left;
   /*overflow: auto;  fix bug height or boxing dont work */
 
 }
@@ -473,7 +478,7 @@ footer a {
   color: yellow;
 }
 footer .super {
-  padding: 30px 0px;
+  padding: 30px 20px;
   background-color: rgba(0, 0, 0, 0.76);
 }
 footer .hosting {
