--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -181,7 +181,7 @@ section {
         position: relative;
         width: 260px;
         float: left;
-        height: 260px;
+        min-height: 200px;
         margin: 12px 0px 12px 24px;
         background-position: 0% 100%;
         background-repeat: no-repeat;
@@ -205,8 +205,7 @@ section {
 
     .searchbox{
         width: 260px;
-        float: left;
-        height: 260px;
+        float: left;        
         margin: 12px 0px 12px 24px;
     }
     
@@ -226,7 +225,7 @@ section {
                 display: block;
                 background-color: @smoke;
                 color: #FFF;
-                bottom: 0px;
+                bottom: 24px;
                 padding: 5px;
                 position: absolute;
                 width: 250px;
