--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -79,6 +79,8 @@ header {
         float: right;
         margin: 0px;
         padding: 24px 0px 0px 0px;
+        text-align: center;
+        width:300px;
         
         ul {
             list-style:none;
