Novo post Apresentação sobre como trabalhar com código legado

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -467,7 +467,7 @@ h1, h2, h3, h4, h5, h6, quote {
 }
 
 p, ul, li, ol, table, h1, h2, h3, h4, h5, h6, pre, dl {
-    margin:5px 0 5px;
+    margin:5px 0px 15px;
 }
 
 ul { padding-left: 17px; list-style-position: outside; }
