--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -67,6 +67,7 @@ header {
         color: transparent;
         background: url(../img/signature-logo.png) no-repeat left center;
         margin-left: 5px;
+        margin-bottom: 0px;
     }
     
     #google_translate_element {
@@ -88,8 +89,9 @@ header {
             margin: 0px;         
         }
 
-       li {
+        li {
             padding: 0px 10px;
+            margin-bottom: 0px;
             display: inline-block;
             /*border-right:1px solid #d2d2d2;
             height: 70px;*/
