--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -81,7 +81,7 @@ header {
         margin: 0px;
         padding: 8px 0px 0px 0px;
         text-align: center;
-        width:300px;
+        /*width:300px;*/
         
         ul {
             list-style:none;
