--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -90,7 +90,7 @@ header #google_translate_element {
 header menu {
   float: right;
   margin: 0px;
-  padding: 18px 0px 0px 0px;
+  padding: 3% 0px 2% 0px;
   text-align: center;
   /*width:300px;*/
 
