--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -79,7 +79,7 @@ header {
     menu {
         float: right;
         margin: 0px;
-        padding: 18px 0px 0px 0px;
+        padding: 3% 0px 2% 0px;
         text-align: center;
         /*width:300px;*/
         
