--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>Sidney Lima Filho {% if page.title %}- {{ page.title }}{% endif %}</title>
+        <title>{% if page.title %}{{ page.title }} - {% endif %}Sidney Lima Filho</title>
         <link href="/themes/default/css/all.css" rel="stylesheet" />
         <link href="http://feeds.feedburner.com/sidneyfilho/" class="feed" rel="alternate" type="application/rss+xml" title="sidneylimafilho.com.br"
         />
